# demo_qcradle

./: .copier-answers.yml  README.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: book.yml  pre-commit.yml
book/: _config.yml  genindex.html  objects.inv  search.html  searchindex.js
book/_sources/docs/: marimo.md  reports.md
book/docs/: api.html  api.md  index.html  marimo.html  reports.html
marimo/: __init__.html  demo.html
pdoc/: demo_qcradle.html  index.html  search.js
pdoc/demo_qcradle/: add.html
src/tests/: test_trivial.py
tests/coverage/: coverage.info  coverage.json  coverage.xml
tests/html-coverage/: class_index.html  function_index.html  index.html  status.json  z_4244d800cd7a3f2d___init___py.html  z_4244d800cd7a3f2d_add_py.html
tests/html-report/: report.html
