[project]
name = 'demo_qcradle'
version = "0.0.0"
description = "Demo for qcradle"
# Please add authors and correct the email...
authors = [{name='tschm', email= 'tschm@mailinator.com'}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[project.urls]
repository = "https://github.com/tschm/demo_qcradle"

[dependency-groups]
dev = [
]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    "*__init__.py"
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/demo_qcradle"]

[tool.hatch.build]
include = [
    "LICENSE",    # Ensure the LICENSE file is included in your package
    "README.md",
    "src/demo_qcradle"
]

[tool.bandit]
exclude_dirs = ["tests"]
